--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ section {
     margin: 1em;
 }
 
-.hsearch {
+.asearch {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -35,7 +35,7 @@ section {
     border-radius: 100px;
     font-style: italic;
 }
-.asearch {
+.hsearch {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -92,21 +92,65 @@ section {
 
 }
 
-button {
-    margin: 0.5em;
-    border-radius: 50%;
+
+.scoreButton {
+    width: 220px;
+    height: 50px;
     border: none;
-    height: 44px;
-    width: 44px;
     outline: none;
-    background: #f4eded2b;
-    color: white;
+    color: #fff;
+    background: #111;
     cursor: pointer;
-    transition: 0.2s ease-in-out;
+    position: relative;
+    z-index: 0;
+    border-radius: 10px;
 }
 
-button:hover {
-    background: #7c7c7c6b;
+.scoreButton:before {
+    content: '';
+    background: linear-gradient(45deg, #ff0000, #ff7300, #fffb00, #48ff00, #00ffd5, #002bff, #7a00ff, #ff00c8, #ff0000);
+    position: absolute;
+    top: -2px;
+    left:-2px;
+    background-size: 400%;
+    z-index: -1;
+    filter: blur(5px);
+    width: calc(100% + 4px);
+    height: calc(100% + 4px);
+    animation: glowing 20s linear infinite;
+    opacity: 0;
+    transition: opacity .3s ease-in-out;
+    border-radius: 10px;
+}
+
+.scoreButton:active {
+    color: #000
+}
+
+.scoreButton:active:after {
+    background: transparent;
+}
+
+.scoreButton:hover:before {
+    opacity: 1;
+}
+
+.scoreButton:after {
+    z-index: -1;
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: #111;
+    left: 0;
+    top: 0;
+    border-radius: 10px;
+}
+
+@keyframes glowing {
+    0% { background-position: 0 0; }
+    50% { background-position: 400% 0; }
+    100% { background-position: 0 0; }
 }
 
 
