--- a/style.css
+++ b/style.css
@@ -1,33 +1,39 @@
 body {
     display: flex;
     justify-content: center;
-    align-items: baseline;
     height: 100vh;
     margin: 0;
     font-family: 'Open Sans', sans-serif;
-    background: #222;
     background-image: url('https://source.unsplash.com/1600x900/?basketball');
     font-size: 200%;
 }
 
 section {
     display: flex;
-    align-self: baseline;
+    flex-direction: row;
     justify-content: space-around;
     align-items: baseline;
-    gap: 80px;
+    gap: 50px;
     background: #000000d0;
-    color: white;
-    padding: 8em;
+    padding: 9em;
     border-radius: 30px;
     width: 100%;
     max-width: 420px;
     margin: 1em;
 }
+h2 {
+    font-size: medium;
+    position: absolute;
+    top: 50px;
+    width: 100%;
+    color: bisque;
+    padding: 15px 0;  
+    text-align: center;
+}
 
 .asearch {
     display: flex;
-    align-items: center;
+    align-self: center;
     justify-content: center;
     border: none;
     outline: none;
